[package]
name = "infrabuddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.15.0"
humantime = "2.0.0"
toml = "0.5.10"
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = "0.4"